Work on home page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,13 +67,7 @@
 
     <!-- Footer -->
     <footer class="">
-      <div class="container d-flex flex-row justify-content-between">
-        <p>
-          Contact us:
-          <a href="mailto:contact@cscconference2024.com"
-            >contact@ieee-swc-2025.com</a
-          >
-        </p>
+      <div class="container d-flex flex-row justify-content-center">
         <p>
           &copy; {{ site.time | date: "%Y" }} IEEE Smart World Congress 2025
         </p>
