--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,11 @@
       rel="stylesheet"
     />
 
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      rel="stylesheet"
+    />
+
     <!-- Custom CSS -->
     <link
       rel="stylesheet"
@@ -30,7 +35,7 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-black px-5 fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="{{ '/' | relative_url }}"
           >{{ site.title }}</a
@@ -66,9 +71,11 @@
     <main>{{ content }}</main>
 
     <!-- Footer -->
-    <footer class="">
-      <div class="container d-flex flex-row justify-content-center">
-        <p>
+    <footer class="bg-dark text-light py-4">
+      <div
+        class="container d-flex flex-row justify-content-center align-items-center"
+      >
+        <p class="m-0">
           &copy; {{ site.time | date: "%Y" }} IEEE Smart World Congress 2025
         </p>
       </div>
