--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,44 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oxanium:wght@200..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+
 /* Custom Styles */
 
 body {
-    font-family: 'Roboto', sans-serif;
-  }
+  font-family: "Roboto", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+}
+
+h1,
+h2,
+h3,
+.navbar-brand {
+  font-family: "Oxanium", sans-serif;
+  font-weight: 600;
+}
+
+h2 {
+  font-size: 2.4em;
+}
+
+.navbar-brand {
+  font-size: 1.2em;
+  font-weight: 500;
+}
+
+h4,
+h5,
+h6,
+.navbar,
+.subheading {
+  font-family: "Roboto", sans-serif;
+}
+
+p,
+body,
+.content-text {
+  font-family: "Roboto", sans-serif;
+}
 
 .jumbotron {
   position: relative;
@@ -15,4 +51,9 @@ body {
 
 footer a:hover {
   text-decoration: underline;
+}
+
+.page-section {
+  max-width: 1200px;
+  margin: auto;
 }
