Work on home page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,16 +36,18 @@
   <body>
     <!-- Navbar -->
     <nav
-      class="navbar navbar-expand-lg navbar-dark bg-black px-5 fixed-top"
+      class="navbar navbar-expand-lg navbar-dark bg-black px-sm-3 px-2 fixed-top"
       style="padding-top: 0.9rem !important; padding-bottom: 0.9rem !important"
     >
-      <div class="container-fluid page-section p-0">
+      <div class="container-fluid navbar-content p-0">
         <a
           class="navbar-brand d-flex flex-row align-items-center gap-2"
           href="{{ '/' | relative_url }}"
           ><img src="/assets//images/ieee mb white png.png" height="22px" />
-          <p class="m-0 d-sm-block d-none">Smart World Congress 2025</p><p class="m-0 d-sm-none">SWC 2025</p></a
-        >
+
+          <p class="m-0 d-sm-block d-none mt-1">Smart World Congress 2025</p>
+          <p class="m-0 d-sm-none mt-1">SWC 2025</p>
+        </a>
         <button
           class="navbar-toggler"
           type="button"
@@ -126,21 +128,21 @@
               </ul>
             </li>
             <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle text-white"
-                  href="#"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >
-                  Travel
-                </a>
-                <ul class="dropdown-menu dropdown-menu-black">
-                  <li>
-                    <a class="dropdown-item" href="#">Coming Soon</a>
-                  </li>
-                </ul>
-              </li>
+              <a
+                class="nav-link dropdown-toggle text-white"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Travel
+              </a>
+              <ul class="dropdown-menu dropdown-menu-black">
+                <li>
+                  <a class="dropdown-item" href="#">Coming Soon</a>
+                </li>
+              </ul>
+            </li>
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle text-white"
