--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,8 @@ body {
 h1,
 h2,
 h3,
-.navbar-brand {
+.navbar-brand,
+.navbar-brand p {
   font-family: "Oxanium", sans-serif;
   font-weight: 600;
 }
@@ -58,14 +59,25 @@ footer a:hover {
   margin: auto;
 }
 
+.navbar-content {
+  max-width: 1400px;
+  margin: auto;
+}
+
 .dropdown-menu-black {
-    background-color: #141414;
+  background-color: #141414;
 }
 
 .dropdown-menu-black .dropdown-item {
-    color: #ffffff;
+  color: #ffffff;
 }
 
 .dropdown-menu-black .dropdown-item:hover {
-    background-color: #333333;
+  background-color: #333333;
+}
+
+@media (max-width: 576px) {
+  .responsive-width {
+    width: 100% !important;
+  }
 }
