--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,6 +76,21 @@ footer a:hover {
   background-color: #333333;
 }
 
+.circle-img {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.hero-section {
+  background-color: rgba(0, 0, 0, 0.5);
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 @media (max-width: 576px) {
   .responsive-width {
     width: 100% !important;
