Work on adding venue pages

--- a/_includes/home.html
+++ b/_includes/home.html
@@ -235,7 +235,7 @@
           budget options. This proximity ensures that conference attendees have
           a range of accommodation choices within walking distance.
         </p>
-        <a href="https://calgary-convention.com/" class="btn btn-primary w-100"
+        <a href="/telus-convention-center" class="btn btn-primary w-100"
           >Learn More</a
         >
       </div>
@@ -255,16 +255,16 @@
       >
         <h3 class="">Calgary, Canada</h3>
         <p class="fs-5">
-          Calgary, Alberta, is a vibrant city nestled in the foothills of the
-          Canadian Rockies, known for its dynamic mix of urban sophistication
-          and outdoor adventure. As Alberta's largest city and a key economic
-          hub, Calgary boasts a thriving energy industry, a growing tech sector,
-          and a strong entrepreneurial spirit. The city is famous for the annual
-          Calgary Stampede, a celebration of its western heritage, and offers
-          stunning natural beauty, with easy access to the nearby Banff and
-          Jasper national parks.
+          Calgary, Alberta, Canada, is a vibrant city nestled in the foothills
+          of the Canadian Rockies, known for its dynamic mix of urban
+          sophistication and outdoor adventure. As Alberta's largest city and a
+          key economic hub, Calgary boasts a thriving energy industry, a growing
+          tech sector, and a strong entrepreneurial spirit. The city is famous
+          for the annual Calgary Stampede, a celebration of its western
+          heritage, and offers stunning natural beauty, with easy access to the
+          nearby Banff and Jasper national parks.
         </p>
-        <a href="#" class="btn btn-primary w-100">Learn More (Coming Soon)</a>
+        <a href="/calgary" class="btn btn-primary w-100">Learn More</a>
       </div>
       <div
         class="col-sm-6 py-2 d-flex justify-content-center align-items-end"
