--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -110,7 +110,12 @@
                 Venue
               </a>
               <ul class="dropdown-menu dropdown-menu-black">
-                <li><a class="dropdown-item" href="#">Coming Soon</a></li>
+                <li>
+                  <a class="dropdown-item" href="/telus-convention-center"
+                    >Telus Convention Center</a
+                  >
+                </li>
+                <li><a class="dropdown-item" href="/calgary">Calgary</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown">
@@ -152,6 +157,22 @@
                 aria-expanded="false"
               >
                 About
+              </a>
+              <ul class="dropdown-menu dropdown-menu-black">
+                <li>
+                  <a class="dropdown-item" href="#">Coming Soon</a>
+                </li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle text-white"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Contact
               </a>
               <ul class="dropdown-menu dropdown-menu-black">
                 <li>
