Added Dr. Malekian

--- a/_includes/home.html
+++ b/_includes/home.html
@@ -55,23 +55,35 @@
         look forward to seeing you in Calgary!<br />Sincerely,
       </p>
       <div class="row text-center">
-        <div class="col-md-6">
+        <div class="col-md-4">
           <img
             src="/assets/images/HenryLeung.jpg"
             alt="Dr. Henry Leung"
             class="circle-img mb-3"
           />
           <h5>Dr. Henry Leung</h5>
+          <h6><i>University of Calgary</i></h6>
           <p>General Chair IEEE SWC 2025</p>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-4">
           <img
             src="/assets/images/Oscar_Lin.jpg"
             alt="Dr. Oscar Lin"
             class="circle-img mb-3"
           />
           <h5>Dr. Oscar Lin</h5>
+          <h6><i>Athabasca University</i></h6>
           <p>Co-General Chair IEEE SWC 2025</p>
+        </div>
+        <div class="col-md-4">
+          <img
+            src="/assets/images/Reza_Malekian.jpg"
+            alt="Dr. Oscar Lin"
+            class="circle-img mb-3"
+          />
+          <h5>Dr. Reza Malekian</h5>
+          <h6><i>Malmö University</i></h6>
+          <p>Program Chair IEEE SWC 2025</p>
         </div>
       </div>
     </div>
