--- a/_includes/home.html
+++ b/_includes/home.html
@@ -94,26 +94,27 @@
         >
           <h4 class="fw-bold">Key Dates and Deadlines</h4>
           <hr class="w-100" />
-          <h5 class="fs-6 fw-bold text-center">Paper Submission</h5>
-          <h6 class="">Coming Soon</h6>
+          <h5 class="fs-6 fw-bold text-center">Full Paper Submission</h5>
+          <h6 class="">March 31, 2025</h6>
+          <hr class="w-100" />
+          <h5 class="fs-6 fw-bold text-center">Authors Notification</h5>
+          <h6 class="">May 31, 2025</h6>
+          <hr class="w-100" />
+          <h5 class="fs-6 fw-bold text-center">Demo/Poster/WiP Paper Due</h5>
+          <h6 class="">June 15, 2025</h6>
+          <hr class="w-100" />
+          <h5 class="fs-6 fw-bold text-center">Camera Ready Copy Due</h5>
+          <h6 class="">June 30, 2025</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">
-            Acceptance/Rejection Notification
+            Tutorial / Workshop / Special Session Proposal
           </h5>
-          <h6 class="">Coming Soon</h6>
-          <hr class="w-100" />
-          <h5 class="fs-6 fw-bold text-center">Camera Ready Copy</h5>
-          <h6 class="">Coming Soon</h6>
-          <hr class="w-100" />
-          <h5 class="fs-6 fw-bold text-center">
-            Tutorial / Workshop / Special Session Submission
-          </h5>
-          <h6 class="">Coming Soon</h6>
+          <h6 class="">Feb. 15, 2025</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">
             Tutorial / Workshop / Special Session Acceptance
           </h5>
-          <h6 class="">Coming Soon</h6>
+          <h6 class="">March 7, 2025</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Conference Dates</h5>
           <h6 class="">August 18 - 22, 2025</h6>
