--- a/_includes/home.html
+++ b/_includes/home.html
@@ -16,8 +16,7 @@
     >
       <h1 class="display-3 fw-bolder mt-5">IEEE Smart World Congress 2025</h1>
       <h3 class="w-75 responsive-width fw-medium text-center">
-        Building on Cross-disciplinary Insights to Shape the Future of Human-AI
-        Interaction
+        Convergence of Minds: Forging Human-AI Partnerships Across Discipline
       </h3>
       <div>
         <h3>Calgary, Alberta, Canada</h3>
