--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,188 +35,13 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav
-      class="navbar navbar-expand-lg navbar-dark bg-black px-sm-3 px-2 fixed-top"
-      style="padding-top: 0.9rem !important; padding-bottom: 0.9rem !important"
-    >
-      <div class="container-fluid navbar-content p-0">
-        <a
-          class="navbar-brand d-flex flex-row align-items-center gap-2"
-          href="{{ '/' | relative_url }}"
-          ><img src="/assets//images/ieee mb white png.png" height="22px" />
-
-          <p class="m-0 d-sm-block d-none mt-1">Smart World Congress 2025</p>
-          <p class="m-0 d-sm-none mt-1">SWC 2025</p>
-        </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="{{ '/' | relative_url }}"
-                >Home</a
-              >
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle text-white"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Call for Papers
-              </a>
-              <ul class="dropdown-menu dropdown-menu-black">
-                <li>
-                  <a class="dropdown-item" href="#">Coming Soon</a>
-                </li>
-              </ul>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle text-white"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Conferences
-              </a>
-              <ul class="dropdown-menu dropdown-menu-black">
-                <li><a class="dropdown-item" href="#">Coming Soon</a></li>
-              </ul>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle text-white"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Venue
-              </a>
-              <ul class="dropdown-menu dropdown-menu-black">
-                <li>
-                  <a class="dropdown-item" href="/telus-convention-center"
-                    >Telus Convention Center</a
-                  >
-                </li>
-                <li><a class="dropdown-item" href="/calgary">Calgary</a></li>
-              </ul>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle text-white"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Program
-              </a>
-              <ul class="dropdown-menu dropdown-menu-black">
-                <li><a class="dropdown-item" href="#">Coming Soon</a></li>
-              </ul>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle text-white"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Travel
-              </a>
-              <ul class="dropdown-menu dropdown-menu-black">
-                <li>
-                  <a class="dropdown-item" href="#">Coming Soon</a>
-                </li>
-              </ul>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle text-white"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                About
-              </a>
-              <ul class="dropdown-menu dropdown-menu-black">
-                <li>
-                  <a class="dropdown-item" href="#">Coming Soon</a>
-                </li>
-              </ul>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle text-white"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Contact
-              </a>
-              <ul class="dropdown-menu dropdown-menu-black">
-                <li>
-                  <a class="dropdown-item" href="#">Coming Soon</a>
-                </li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+    {% include navbar.html %}
 
     <!-- Main Content -->
     <main>{{ content }}</main>
 
     <!-- Footer -->
-    <footer class="bg-black text-light py-4">
-      <div class="page-section container-fluid px-5 py-3">
-        <div class="row">
-          <div class="col-sm-4">
-            <h3 class="fs-4">Contact</h3>
-            <h5 class="fs-6">Coming Soon</h5>
-            <!-- <h5 class="fs-6">Venue Address</h5>
-                    <h5 class="fs-6">Email</h5>
-                    <h5 class="fs-6">Support</h5> -->
-          </div>
-          <div class="col-sm-4">
-            <h3 class="fs-4">Conferences</h3>
-            <h5 class="fs-6">Coming Soon</h5>
-          </div>
-          <div class="col-sm-4">
-            <h3 class="fs-4">About</h3>
-            <h5 class="fs-6">Coming Soon</h5>
-          </div>
-        </div>
-      </div>
-      <div
-        class="container d-flex flex-row justify-content-center align-items-center py-1"
-      >
-        <p class="m-0">
-          &copy; {{ site.time | date: "%Y" }} IEEE Smart World Congress 2025
-        </p>
-      </div>
-    </footer>
+    {% include footer.html %}
 
     <!-- Bootstrap JS and dependencies -->
     <script
