--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,6 +17,9 @@
           <li>
             <a class="dropdown-item" href="/metaverse">Metaverse 2025</a>
           </li>
+          <li>
+            <a class="dropdown-item" href="/metaverse">ScalCom 2025</a>
+          </li>
         </ul>
       </div>
       <div class="col-sm-4">
