--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,7 +18,10 @@
             <a class="dropdown-item" href="/metaverse">Metaverse 2025</a>
           </li>
           <li>
-            <a class="dropdown-item" href="/metaverse">ScalCom 2025</a>
+            <a class="dropdown-item" href="/scalcom">ScalCom 2025</a>
+          </li>
+          <li>
+            <a class="dropdown-item" href="/uic">UIC 2025</a>
           </li>
         </ul>
       </div>
