--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -68,6 +68,9 @@
             <li>
               <a class="dropdown-item" href="/scalcom">ScalCom 2025</a>
             </li>
+            <li>
+              <a class="dropdown-item" href="/uic">UIC 2025</a>
+            </li>
           </ul>
         </li>
         <li class="nav-item dropdown">
