--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -44,7 +44,7 @@
           </a>
           <ul class="dropdown-menu dropdown-menu-black">
             <li>
-              <a class="dropdown-item" href="#">Coming Soon</a>
+              <a class="dropdown-item" href="/cfp">SWC CFP</a>
             </li>
           </ul>
         </li>
