Added ATC conference

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -60,6 +60,9 @@
           </a>
           <ul class="dropdown-menu dropdown-menu-black">
             <li>
+              <a class="dropdown-item" href="/atc">ATC 2025</a>
+            </li>
+            <li>
               <a class="dropdown-item" href="/digitaltwin">Digital Twin 2025</a>
             </li>
             <li>
