--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,6 +12,9 @@
         <h3 class="fs-4">Conferences</h3>
         <ul class="list-unstyled">
           <li>
+            <a class="dropdown-item" href="/atc">ATC 2025</a>
+          </li>
+          <li>
             <a class="dropdown-item" href="/digitaltwin">Digital Twin 2025</a>
           </li>
           <li>
