--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -106,7 +106,7 @@
             Program
           </a>
           <ul class="dropdown-menu dropdown-menu-black">
-            <li><a class="dropdown-item" href="#">Coming Soon</a></li>
+            <li><a class="dropdown-item" href="/keynotes">Keynotes</a></li>
           </ul>
         </li>
         <li class="nav-item dropdown">
