--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -84,6 +84,22 @@
             data-bs-toggle="dropdown"
             aria-expanded="false"
           >
+            Forums
+          </a>
+          <ul class="dropdown-menu dropdown-menu-black">
+            <li>
+              <a class="dropdown-item" href="/wsw-forum">WSW Forum 2025</a>
+            </li>
+          </ul>
+        </li>
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle text-white"
+            href="#"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
             Venue
           </a>
           <ul class="dropdown-menu dropdown-menu-black">
