--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -77,6 +77,11 @@
           </ul>
         </li>
         <li class="nav-item dropdown">
+          <a class="nav-link text-white" href="/workshops">
+            Workshops
+          </a>
+        </li>
+        <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle text-white"
             href="#"
@@ -125,7 +130,7 @@
             <li><a class="dropdown-item" href="/keynotes">Keynotes</a></li>
           </ul>
         </li>
-        <li class="nav-item dropdown">
+        <!-- <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle text-white"
             href="#"
@@ -140,23 +145,7 @@
               <a class="dropdown-item" href="#">Coming Soon</a>
             </li>
           </ul>
-        </li>
-        <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle text-white"
-            href="#"
-            role="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
-            Contact
-          </a>
-          <ul class="dropdown-menu dropdown-menu-black">
-            <li>
-              <a class="dropdown-item" href="#">Coming Soon</a>
-            </li>
-          </ul>
-        </li>
+        </li> -->
       </ul>
     </div>
   </div>
