Updates to dates, added special sessions

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -33,20 +33,7 @@
           >
         </li>
         <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle text-white"
-            href="#"
-            role="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
-            Call for Papers
-          </a>
-          <ul class="dropdown-menu dropdown-menu-black">
-            <li>
-              <a class="dropdown-item" href="/cfp">SWC CFP</a>
-            </li>
-          </ul>
+          <a class="nav-link text-white" href="/cfp"> Call for Papers </a>
         </li>
         <li class="nav-item dropdown">
           <a
@@ -77,8 +64,11 @@
           </ul>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link text-white" href="/workshops">
-            Workshops
+          <a class="nav-link text-white" href="/workshops"> Workshops </a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link text-white" href="/special-sessions">
+            Special Sessions
           </a>
         </li>
         <li class="nav-item dropdown">
@@ -130,22 +120,9 @@
             <li><a class="dropdown-item" href="/keynotes">Keynotes</a></li>
           </ul>
         </li>
-        <!-- <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle text-white"
-            href="#"
-            role="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
-            Travel
-          </a>
-          <ul class="dropdown-menu dropdown-menu-black">
-            <li>
-              <a class="dropdown-item" href="#">Coming Soon</a>
-            </li>
-          </ul>
-        </li> -->
+        <li class="nav-item dropdown">
+          <a class="nav-link text-white" href="/contact"> Contact </a>
+        </li>
       </ul>
     </div>
   </div>
