--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -114,6 +114,24 @@
             data-bs-toggle="dropdown"
             aria-expanded="false"
           >
+            Travel
+          </a>
+          <ul class="dropdown-menu dropdown-menu-black">
+            <li>
+              <a class="dropdown-item" href="/travel/ieee-travel-grants"
+                >IEEE Travel Grants</a
+              >
+            </li>
+          </ul>
+        </li>
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle text-white"
+            href="#"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
             Program
           </a>
           <ul class="dropdown-menu dropdown-menu-black">
