Added travel section and IEEE travel grants

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -118,8 +118,8 @@
           </a>
           <ul class="dropdown-menu dropdown-menu-black">
             <li>
-              <a class="dropdown-item" href="/travel/ieee-travel-grants"
-                >IEEE Travel Grants</a
+              <a class="dropdown-item" href="/travel/ieee-cis-travel-grants"
+                >IEEE CIS Travel Grants</a
               >
             </li>
           </ul>
