Separated program and keynotes pages

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -24,14 +24,14 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a
             class="nav-link active"
             aria-current="page"
             href="{{ '/' | relative_url }}"
             >Home</a
           >
-        </li>
+        </li> -->
         <li class="nav-item dropdown">
           <a class="nav-link text-white" href="/cfp"> Call for Papers </a>
         </li>
@@ -72,20 +72,13 @@
           </a>
         </li>
         <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle text-white"
-            href="#"
-            role="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
-            Forums
-          </a>
-          <ul class="dropdown-menu dropdown-menu-black">
-            <li>
-              <a class="dropdown-item" href="/wsw-forum">WSW Forum 2025</a>
-            </li>
-          </ul>
+          <a class="nav-link text-white" href="/forums/">Forums</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link text-white" href="/keynotes/">Keynotes</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link text-white" href="/program"> Program </a>
         </li>
         <li class="nav-item dropdown">
           <a
@@ -122,20 +115,6 @@
                 >IEEE CIS Travel Grants</a
               >
             </li>
-          </ul>
-        </li>
-        <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle text-white"
-            href="#"
-            role="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
-            Program
-          </a>
-          <ul class="dropdown-menu dropdown-menu-black">
-            <li><a class="dropdown-item" href="/keynotes">Keynotes</a></li>
           </ul>
         </li>
         <li class="nav-item dropdown">
