--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,6 @@
 <footer class="bg-black text-light py-4">
   <div class="page-section container-fluid px-5 py-3">
     <div class="row">
-      <!-- <div class="col-sm-2"> -->
-        <!-- <h3 class="fs-4">Contact</h3> -->
-        <!-- <h5 class="fs-6">Coming Soon</h5> -->
-        <!-- <h5 class="fs-6">Venue Address</h5>
-                  <h5 class="fs-6">Email</h5>
-                  <h5 class="fs-6">Support</h5> -->
-      <!-- </div> -->
       <div class="col-sm-4">
         <h3 class="fs-4">Conferences</h3>
         <ul class="list-unstyled">
@@ -40,7 +33,7 @@
         <h3 class="fs-4">About</h3>
         <p class="fs-6">
           The IEEE Smart World Congress 2025 (IEEE SWC 2025) will be held from
-          August 18–22, 2025, in Calgary, Canada, focusing on advancements in
+          August 18 - 22, 2025, in Calgary, Canada, focusing on advancements in
           smart technologies like IoT, AI, smart cities, and cybersecurity.
         </p>
       </div>
