--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -96,7 +96,11 @@
                 >Telus Convention Center</a
               >
             </li>
-            <li><a class="dropdown-item" href="/venue">Calgary</a></li>
+            <li>
+              <a class="dropdown-item" href="/venue/calgary/"
+                >Calgary and Area</a
+              >
+            </li>
           </ul>
         </li>
         <li class="nav-item dropdown">
@@ -110,6 +114,11 @@
             Travel
           </a>
           <ul class="dropdown-menu dropdown-menu-black">
+            <li>
+              <a class="dropdown-item" href="/travel/banff-group-trip/"
+                >Banff Group Trip</a
+              >
+            </li>
             <li>
               <a class="dropdown-item" href="/travel/ieee-cis-travel-grants"
                 >IEEE CIS Travel Grants</a
