--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -75,7 +75,27 @@
           <a class="nav-link text-white" href="/forums/">Forums</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link text-white" href="/keynotes/">Keynotes</a>
+          <a
+            class="nav-link dropdown-toggle text-white"
+            href="#"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            Keynotes
+          </a>
+          <ul class="dropdown-menu dropdown-menu-black">
+            <li>
+              <a class="dropdown-item" href="/keynotes/giancarlo-fortino/"
+                >Giancarlo Fortino</a
+              >
+            </li>
+            <li>
+              <a class="dropdown-item" href="/keynotes/runhe-huang/"
+                >Ruhne Huang</a
+              >
+            </li>
+          </ul>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link text-white" href="/program"> Program </a>
