--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="bg-black text-light py-4">
   <div class="page-section container-fluid px-5 py-3">
     <div class="row">
-      <div class="col-sm-4">
+      <div class="col-sm-4 mb-4">
         <h3 class="fs-4">Conferences</h3>
         <ul class="list-unstyled">
           <li>
@@ -21,7 +21,7 @@
           </li>
         </ul>
       </div>
-      <div class="col-sm-4">
+      <div class="col-sm-4 mb-4">
         <h3 class="fs-4">Call for Papers</h3>
         <div>
           <a href="/cfp" class="btn btn-primary text-decoration-none"
