--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,5 +1,5 @@
 <nav
-  class="navbar navbar-expand-lg navbar-dark bg-black px-sm-3 px-2 fixed-top"
+  class="navbar navbar-expand-xl navbar-dark bg-black px-sm-3 px-2 fixed-top"
   style="padding-top: 0.9rem !important; padding-bottom: 0.9rem !important"
 >
   <div class="container-fluid navbar-content p-0">
