--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,10 +85,11 @@ footer a:hover {
 
 .hero-section {
   background-color: rgba(0, 0, 0, 0.5);
-  height: 100%;
+  min-height: 60vh;
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 20px;
 }
 
 @media (max-width: 576px) {
