Added tutorials and industry day

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -8,8 +8,8 @@
       href="{{ '/' | relative_url }}"
       ><img src="/assets//images/ieee mb white png.png" height="22px" />
 
-      <p class="m-0 d-sm-block d-none mt-1">Smart World Congress 2025</p>
-      <p class="m-0 d-sm-none mt-1">SWC 2025</p>
+      <!-- <p class="m-0 d-sm-block d-none mt-1">Smart World Congress 2025</p> -->
+      <p class="m-0 mt-1">SWC 2025</p>
     </a>
     <button
       class="navbar-toggler"
@@ -64,15 +64,82 @@
           </ul>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link text-white" href="/workshops"> Workshops </a>
+          <a
+            class="nav-link dropdown-toggle text-white"
+            href="#"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            Workshops
+          </a>
+          <ul class="dropdown-menu dropdown-menu-black">
+            <li class="">
+              <a class="dropdown-item" href="/workshops/iaiddt/">
+                IAIDDT 2025</a
+              >
+            </li>
+            <li class="">
+              <a class="dropdown-item" href="/workshops/next-gen-networking/">
+                Next Generation Networking
+              </a>
+            </li>
+            <li class="">
+              <a class="dropdown-item" href="/workshops/fusion/">
+                Fusion 2025
+              </a>
+            </li>
+            <li class="">
+              <a class="dropdown-item" href="/workshops/sega/"> SEGA 2025 </a>
+            </li>
+          </ul>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link text-white" href="/special-sessions">
+          <a
+            class="nav-link dropdown-toggle text-white"
+            href="#"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
             Special Sessions
           </a>
+          <ul class="dropdown-menu dropdown-menu-black">
+            <li class="">
+              <a
+                class="dropdown-item"
+                href="/special-sessions/ai-and-machine-learning/"
+              >
+                AI and Machine Learning</a
+              >
+            </li>
+            <li class="">
+              <a
+                class="dropdown-item"
+                href="/special-sessions/5g-enabled-uavs-and-ml-for-iot-uav-networks/"
+              >
+                5G-Enabled UAV and ML for IOT/UAV Networks
+              </a>
+            </li>
+          </ul>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link text-white" href="/forums/">Forums</a>
+          <a
+            class="nav-link dropdown-toggle text-white"
+            href="#"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            Forums
+          </a>
+          <ul class="dropdown-menu dropdown-menu-black">
+            <li class="">
+              <a class="dropdown-item" href="/forums/women-in-the-smart-world/">
+                WSW 2025</a
+              >
+            </li>
+          </ul>
         </li>
         <li class="nav-item dropdown">
           <a
@@ -98,6 +165,27 @@
           </ul>
         </li>
         <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle text-white"
+            href="#"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            Tutorials
+          </a>
+          <ul class="dropdown-menu dropdown-menu-black dropdown-menu-end">
+            <li class="">
+              <a
+                class="dropdown-item"
+                href="/tutorials/advances-in-knowledge-graph-computation-in-the-era-of-gen-ai/"
+              >
+                Knowledge Graph Computation in the Era of Gen AI
+              </a>
+            </li>
+          </ul>
+        </li>
+        <li class="nav-item dropdown">
           <a class="nav-link text-white" href="/program"> Program </a>
         </li>
         <li class="nav-item dropdown">
@@ -110,7 +198,7 @@
           >
             Venue
           </a>
-          <ul class="dropdown-menu dropdown-menu-black">
+          <ul class="dropdown-menu dropdown-menu-black dropdown-menu-end">
             <li>
               <a class="dropdown-item" href="/venue/telus-convention-center"
                 >Telus Convention Center</a
@@ -133,7 +221,7 @@
           >
             Travel
           </a>
-          <ul class="dropdown-menu dropdown-menu-black">
+          <ul class="dropdown-menu dropdown-menu-black dropdown-menu-end">
             <li>
               <a class="dropdown-item" href="/travel/banff-group-trip/"
                 >Banff Group Trip</a
