--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -159,7 +159,7 @@
             </li>
             <li>
               <a class="dropdown-item" href="/keynotes/runhe-huang/"
-                >Ruhne Huang</a
+                >Runhe Huang</a
               >
             </li>
           </ul>
