Added Dr. Yang's keynote

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -162,6 +162,11 @@
                 >Runhe Huang</a
               >
             </li>
+            <li>
+              <a class="dropdown-item" href="/keynotes/chunsheng-yang/"
+                >Chunsheng Yang</a
+              >
+            </li>
           </ul>
         </li>
         <li class="nav-item dropdown">
