Added call for tutorials

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -181,6 +181,11 @@
           </a>
           <ul class="dropdown-menu dropdown-menu-black dropdown-menu-end">
             <li class="">
+              <a class="dropdown-item" href="/tutorials/call-for-tutorials/">
+                Call for Tutorials
+              </a>
+            </li>
+            <li class="">
               <a
                 class="dropdown-item"
                 href="/tutorials/advances-in-knowledge-graph-computation-in-the-era-of-gen-ai/"
