Added Practice of Using Language Models tutorial

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -193,6 +193,15 @@
                 Knowledge Graph Computation in the Era of Gen AI
               </a>
             </li>
+
+            <li class="">
+              <a
+                class="dropdown-item"
+                href="/tutorials/the-practice-of-using-language-models/"
+              >
+                The Practice of Using Language Models
+              </a>
+            </li>
           </ul>
         </li>
         <li class="nav-item dropdown">
