--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -242,13 +242,18 @@
           </a>
           <ul class="dropdown-menu dropdown-menu-black dropdown-menu-end">
             <li>
-              <a class="dropdown-item" href="/travel/banff-group-trip/"
-                >Banff Group Trip</a
+              <a class="dropdown-item" href="/travel/visa-information"
+                >Visa Information</a
               >
             </li>
             <li>
               <a class="dropdown-item" href="/travel/ieee-cis-travel-grants"
                 >IEEE CIS Travel Grants</a
+              >
+            </li>
+            <li>
+              <a class="dropdown-item" href="/travel/banff-group-trip/"
+                >Banff Group Trip</a
               >
             </li>
           </ul>
