--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,21 @@
 <footer class="bg-black text-light py-4">
-  <div class="page-section container-fluid px-5 py-3">
-    <div class="row">
-      <div class="col-sm-4 mb-4">
-        <h3 class="fs-4">Conferences</h3>
+  <div class="m-auto container-fluid px-3 px-md-3 px-lg-3 px-xxl-0 py-3" style="max-width: 1400px">
+    <div class="row g-5">
+      <div class="col-md-6 col-lg-4 d-flex flex-column gap-3">
+        <div class="navbar-brand d-flex flex-row align-items-center gap-lg-3">
+          <img src="/assets//images/ieee mb white png.png" height="22px" />
+
+          <!-- <p class="m-0 d-sm-block d-none mt-1">Smart World Congress 2025</p> -->
+          <p class="m-0 mt-1 fs-4">SWC 2025</p>
+        </div>
+        <p class="fs-6">
+          The IEEE Smart World Congress 2025 (IEEE SWC 2025) will be held from
+          August 18 - 22, 2025, in Calgary, Canada, focusing on advancements in
+          smart technologies like IoT, AI, smart cities, and cybersecurity.
+        </p>
+      </div>
+      <div class="col-md-3 col-lg-2 d-flex flex-column gap-lg-3">
+        <h3 class="fs-4 mt-1">Conferences</h3>
         <ul class="list-unstyled">
           <li>
             <a class="dropdown-item" href="/atc">ATC 2025</a>
@@ -21,21 +34,38 @@
           </li>
         </ul>
       </div>
-      <div class="col-sm-4 mb-4">
-        <h3 class="fs-4">Call for Papers</h3>
-        <div>
+      <div class="col-md-3 col-lg-2 d-flex flex-column gap-lg-3">
+        <h3 class="fs-4 mt-1">Links</h3>
+        <ul class="list-unstyled">
+          <li>
+            <a class="dropdown-item" href="/contact">Contact</a>
+          </li>
+          <li>
+            <a class="dropdown-item" href="/program">Program</a>
+          </li>
+          <li>
+            <a class="dropdown-item" href="/travel/visa-information/"
+              >Visa Information</a
+            >
+          </li>
+          <li>
+            <a class="dropdown-item" href="/travel/ieee-cis-travel-grants/"
+              >Travel Grants</a
+            >
+          </li>
+        </ul>
+      </div>
+      <div class="col-md-4 mb-4">
+        <div
+          class="d-flex flex-column gap-2 justify-content-start align-content-start"
+        >
           <a href="/cfp" class="btn btn-primary text-decoration-none"
             >Call for Papers and Proposals</a
           >
+          <a href="/registration" class="btn btn-success text-decoration-none"
+            >Register for SWC 2025</a
+          >
         </div>
-      </div>
-      <div class="col-sm-4">
-        <h3 class="fs-4">About</h3>
-        <p class="fs-6">
-          The IEEE Smart World Congress 2025 (IEEE SWC 2025) will be held from
-          August 18 - 22, 2025, in Calgary, Canada, focusing on advancements in
-          smart technologies like IoT, AI, smart cities, and cybersecurity.
-        </p>
       </div>
     </div>
   </div>
