Add accommodation and visa information

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -242,6 +242,11 @@
           </a>
           <ul class="dropdown-menu dropdown-menu-black dropdown-menu-end">
             <li>
+              <a class="dropdown-item" href="/travel/accommodation/"
+                >Accommodation</a
+              >
+            </li>
+            <li>
               <a class="dropdown-item" href="/travel/visa-information"
                 >Visa Information</a
               >
