--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -205,9 +205,6 @@
           </ul>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link text-white" href="/program"> Program </a>
-        </li>
-        <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle text-white"
             href="#"
@@ -215,9 +212,19 @@
             data-bs-toggle="dropdown"
             aria-expanded="false"
           >
-            Venue
+            About
           </a>
           <ul class="dropdown-menu dropdown-menu-black dropdown-menu-end">
+            <li class="">
+              <span class="dropdown-item-text text-white">About</span>
+            </li>
+            <li>
+              <a class="dropdown-item" href="/program/">Program</a>
+            </li>
+
+            <li class="border-top mt-2">
+              <span class="dropdown-item-text text-white">Venue</span>
+            </li>
             <li>
               <a class="dropdown-item" href="/venue/telus-convention-center"
                 >Telus Convention Center</a
@@ -228,19 +235,9 @@
                 >Calgary and Area</a
               >
             </li>
-          </ul>
-        </li>
-        <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle text-white"
-            href="#"
-            role="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
-            Travel
-          </a>
-          <ul class="dropdown-menu dropdown-menu-black dropdown-menu-end">
+            <li class="border-top mt-2">
+              <span class="dropdown-item-text text-white">Travel</span>
+            </li>
             <li>
               <a class="dropdown-item" href="/travel/accommodation/"
                 >Accommodation</a
@@ -265,6 +262,14 @@
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link text-white" href="/contact"> Contact </a>
+        </li>
+
+        <li
+          class="nav-item dropdown ms-xl-2 d-flex flex-column justify-content-center align-items-start"
+        >
+          <a class="btn btn-success btn-sm" href="/registration/">
+            Register for SWC 2025</a
+          >
         </li>
       </ul>
     </div>
