Work on Industry Day

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,8 @@
 <footer class="bg-black text-light py-4">
-  <div class="m-auto container-fluid px-3 px-md-3 px-lg-3 px-xxl-0 py-3" style="max-width: 1400px">
+  <div
+    class="m-auto container-fluid px-3 px-md-3 px-lg-3 px-xxl-0 py-3"
+    style="max-width: 1400px"
+  >
     <div class="row g-5">
       <div class="col-md-6 col-lg-4 d-flex flex-column gap-3">
         <div class="navbar-brand d-flex flex-row align-items-center gap-lg-3">
@@ -42,6 +45,11 @@
           </li>
           <li>
             <a class="dropdown-item" href="/program">Program</a>
+          </li>
+          <li>
+            <a class="dropdown-item" href="/program/industry-day/"
+              >Industry Day</a
+            >
           </li>
           <li>
             <a class="dropdown-item" href="/travel/visa-information/"
