--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -151,23 +151,7 @@
           >
             Keynotes
           </a>
-          <ul class="dropdown-menu dropdown-menu-black">
-            <li>
-              <a class="dropdown-item" href="/keynotes/giancarlo-fortino/"
-                >Giancarlo Fortino</a
-              >
-            </li>
-            <li>
-              <a class="dropdown-item" href="/keynotes/runhe-huang/"
-                >Runhe Huang</a
-              >
-            </li>
-            <li>
-              <a class="dropdown-item" href="/keynotes/chunsheng-yang/"
-                >Chunsheng Yang</a
-              >
-            </li>
-          </ul>
+          <ul class="dropdown-menu dropdown-menu-black"></ul>
         </li>
         <li class="nav-item dropdown">
           <a
@@ -212,16 +196,33 @@
             data-bs-toggle="dropdown"
             aria-expanded="false"
           >
+            Program
+          </a>
+          <ul class="dropdown-menu dropdown-menu-black dropdown-menu-end">
+            <li>
+              <a class="dropdown-item" href="/program/">Schedule</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="/program/industry-day/"
+                >Industry Day</a
+              >
+            </li>
+          </ul>
+        </li>
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle text-white"
+            href="#"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
             About
           </a>
           <ul class="dropdown-menu dropdown-menu-black dropdown-menu-end">
             <li class="">
               <span class="dropdown-item-text text-white">About</span>
             </li>
-            <li>
-              <a class="dropdown-item" href="/program/">Program</a>
-            </li>
-
             <li class="border-top mt-2">
               <span class="dropdown-item-text text-white">Venue</span>
             </li>
@@ -267,9 +268,7 @@
         <li
           class="nav-item dropdown ms-xl-2 d-flex flex-column justify-content-center align-items-start"
         >
-          <a class="btn btn-success btn-sm" href="/registration/">
-            Register for SWC 2025</a
-          >
+          <a class="btn btn-success" href="/registration/">Register</a>
         </li>
       </ul>
     </div>
