--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,12 @@
       rel="stylesheet"
     />
 
+    <!-- Make sure you include Bootstrap Icons -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
+
     <!-- Custom CSS -->
     <link
       rel="stylesheet"
