--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -220,10 +220,7 @@
             About
           </a>
           <ul class="dropdown-menu dropdown-menu-black dropdown-menu-end">
-            <li class="">
-              <span class="dropdown-item-text text-white">About</span>
-            </li>
-            <li class="border-top mt-2">
+            <li class="mt-2">
               <span class="dropdown-item-text text-white">Venue</span>
             </li>
             <li>
