--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -151,7 +151,23 @@
           >
             Keynotes
           </a>
-          <ul class="dropdown-menu dropdown-menu-black"></ul>
+          <ul class="dropdown-menu dropdown-menu-black">
+            <li>
+              <a class="dropdown-item" href="/keynotes/giancarlo-fortino/"
+                >Giancarlo Fortino</a
+              >
+            </li>
+            <li>
+              <a class="dropdown-item" href="/keynotes/runhe-huang/"
+                >Runhe Huang</a
+              >
+            </li>
+            <li>
+              <a class="dropdown-item" href="/keynotes/chunsheng-yang/"
+                >Chunsheng Yang</a
+              >
+            </li>
+          </ul>
         </li>
         <li class="nav-item dropdown">
           <a
