Added intelligent networking tutorial

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -193,7 +193,14 @@
                 Knowledge Graph Computation in the Era of Gen AI
               </a>
             </li>
-
+            <li class="">
+              <a
+                class="dropdown-item"
+                href="/tutorials/intelligent-network-management-for-next-generation-networks/"
+              >
+                Intelligent Network Management for Next-Generation Networks
+              </a>
+            </li>
             <li class="">
               <a
                 class="dropdown-item"
