--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -24,14 +24,6 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
-        <!-- <li class="nav-item">
-          <a
-            class="nav-link active"
-            aria-current="page"
-            href="{{ '/' | relative_url }}"
-            >Home</a
-          >
-        </li> -->
         <li class="nav-item dropdown">
           <a class="nav-link text-white" href="/cfp"> Call for Papers </a>
         </li>
@@ -80,13 +72,13 @@
               >
             </li>
             <li class="">
-              <a class="dropdown-item" href="/workshops/next-gen-networking/">
-                Next Generation Networking
+              <a class="dropdown-item" href="/workshops/fusion/">
+                Fusion 2025
               </a>
             </li>
             <li class="">
-              <a class="dropdown-item" href="/workshops/fusion/">
-                Fusion 2025
+              <a class="dropdown-item" href="/workshops/next-gen-networking/">
+                Next Generation Networking 2025
               </a>
             </li>
             <li class="">
@@ -185,20 +177,20 @@
                 Call for Tutorials
               </a>
             </li>
+            <li class="border-top mt-2">
+              <a
+                class="dropdown-item"
+                href="/tutorials/intelligent-network-management-for-next-generation-networks/"
+              >
+                Intelligent Network Management for Next-Generation Networks
+              </a>
+            </li>
             <li class="">
               <a
                 class="dropdown-item"
                 href="/tutorials/advances-in-knowledge-graph-computation-in-the-era-of-gen-ai/"
               >
                 Knowledge Graph Computation in the Era of Gen AI
-              </a>
-            </li>
-            <li class="">
-              <a
-                class="dropdown-item"
-                href="/tutorials/intelligent-network-management-for-next-generation-networks/"
-              >
-                Intelligent Network Management for Next-Generation Networks
               </a>
             </li>
             <li class="">
