Added tutorial and industry day links

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -177,7 +177,7 @@
                 Call for Tutorials
               </a>
             </li>
-            <li class="border-top mt-2">
+            <li class="border-top mt-2 pt-2">
               <a
                 class="dropdown-item"
                 href="/tutorials/intelligent-network-management-for-next-generation-networks/"
@@ -199,6 +199,15 @@
                 href="/tutorials/the-practice-of-using-language-models/"
               >
                 The Practice of Using Language Models
+              </a>
+            </li>
+            <li class="">
+              <a
+                class="dropdown-item"
+                href="/tutorials/towards-resilient-and-ultrasafe-energy-systems-for-the-next-gen-smart-grid/"
+              >
+                Towards Resilient and Ultrasafe Energy Systems for the Next-Gen
+                Smart Grid
               </a>
             </li>
           </ul>
