Added Federated Learning tutorial

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -196,6 +196,14 @@
             <li class="">
               <a
                 class="dropdown-item"
+                href="/tutorials/roadmap-of-federated-learning-from-motivation-to-practice/"
+              >
+                Roadmap of Federated Learning: from Motivation to Practice
+              </a>
+            </li>
+            <li class="">
+              <a
+                class="dropdown-item"
                 href="/tutorials/the-practice-of-using-language-models/"
               >
                 The Practice of Using Language Models
