Added Shauna Zenteno keynote and updated industry day speakers

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -145,6 +145,11 @@
           </a>
           <ul class="dropdown-menu dropdown-menu-black">
             <li>
+              <a class="dropdown-item" href="/keynotes/chunsheng-yang/"
+                >Chunsheng Yang</a
+              >
+            </li>
+            <li>
               <a class="dropdown-item" href="/keynotes/giancarlo-fortino/"
                 >Giancarlo Fortino</a
               >
@@ -155,8 +160,8 @@
               >
             </li>
             <li>
-              <a class="dropdown-item" href="/keynotes/chunsheng-yang/"
-                >Chunsheng Yang</a
+              <a class="dropdown-item" href="/keynotes/shauna-zenteno/"
+                >Shauna Zenteno</a
               >
             </li>
           </ul>
