Work on industry day and keynotes

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -25,9 +25,6 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item dropdown">
-          <a class="nav-link text-white" href="/cfp"> Call for Papers </a>
-        </li>
-        <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle text-white"
             href="#"
@@ -52,6 +49,9 @@
             </li>
             <li>
               <a class="dropdown-item" href="/uic">UIC 2025</a>
+            </li>
+            <li class="border-top mt-2 pt-2">
+              <a class="dropdown-item" href="/cfp/">Call for Papers</a>
             </li>
           </ul>
         </li>
@@ -84,6 +84,9 @@
             <li class="">
               <a class="dropdown-item" href="/workshops/sega/"> SEGA 2025 </a>
             </li>
+            <li class="border-top mt-2 pt-2">
+              <a class="dropdown-item" href="/cfp/">Call for Papers</a>
+            </li>
           </ul>
         </li>
         <li class="nav-item dropdown">
@@ -113,6 +116,9 @@
                 5G-Enabled UAV and ML for IOT/UAV Networks
               </a>
             </li>
+            <li class="border-top mt-2 pt-2">
+              <a class="dropdown-item" href="/cfp/">Call for Papers</a>
+            </li>
           </ul>
         </li>
         <li class="nav-item dropdown">
@@ -123,12 +129,26 @@
             data-bs-toggle="dropdown"
             aria-expanded="false"
           >
-            Forums
+            Forums & Panels
           </a>
           <ul class="dropdown-menu dropdown-menu-black">
+            <li class="mt-2">
+              <span class="dropdown-item-text text-white">Forums</span>
+            </li>
             <li class="">
               <a class="dropdown-item" href="/forums/women-in-the-smart-world/">
                 WSW 2025</a
+              >
+            </li>
+            <li class="border-top mt-2 pt-2">
+              <span class="dropdown-item-text text-white">Panels</span>
+            </li>
+            <li class="">
+              <a
+                class="dropdown-item"
+                href="/panels/ais-transformative-influence-on-higher-education/"
+              >
+                AI's Transformative Influence on Higher Education</a
               >
             </li>
           </ul>
@@ -226,6 +246,11 @@
           </ul>
         </li>
         <li class="nav-item dropdown">
+          <a class="nav-link text-white" href="/program/industry-day/"
+            >Industry Day</a
+          >
+        </li>
+        <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle text-white"
             href="#"
@@ -238,11 +263,6 @@
           <ul class="dropdown-menu dropdown-menu-black dropdown-menu-end">
             <li>
               <a class="dropdown-item" href="/program/">Schedule</a>
-            </li>
-            <li>
-              <a class="dropdown-item" href="/program/industry-day/"
-                >Industry Day</a
-              >
             </li>
           </ul>
         </li>
@@ -270,7 +290,7 @@
                 >Calgary and Area</a
               >
             </li>
-            <li class="border-top mt-2">
+            <li class="border-top mt-2 pt-2">
               <span class="dropdown-item-text text-white">Travel</span>
             </li>
             <li>
@@ -298,7 +318,6 @@
         <li class="nav-item dropdown">
           <a class="nav-link text-white" href="/contact"> Contact </a>
         </li>
-
         <li
           class="nav-item dropdown ms-xl-2 d-flex flex-column justify-content-center align-items-start"
         >
