Added industry day keynotes to navbar

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -184,6 +184,25 @@
                 >Shauna Zenteno</a
               >
             </li>
+            <li class="border-top mt-2 pt-2">
+              <span class="dropdown-item-text text-white"
+                >Industry Day Keynotes</span
+              >
+            </li>
+            <li>
+              <a
+                class="dropdown-item"
+                href="/program/industry-day/#jan-bradley-keynote"
+                >Jan Bradley</a
+              >
+            </li>
+            <li>
+              <a
+                class="dropdown-item"
+                href="/program/industry-day/#martin-dinel-keynote"
+                >Martin Dinel</a
+              >
+            </li>
           </ul>
         </li>
         <li class="nav-item dropdown">
