--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -270,20 +270,7 @@
           >
         </li>
         <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle text-white"
-            href="#"
-            role="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
-            Program
-          </a>
-          <ul class="dropdown-menu dropdown-menu-black dropdown-menu-end">
-            <li>
-              <a class="dropdown-item" href="/program/">Schedule</a>
-            </li>
-          </ul>
+          <a class="nav-link text-white" href="/program">Program</a>
         </li>
         <li class="nav-item dropdown">
           <a
