Added sensing the mind tutorial

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -246,6 +246,11 @@
               </a>
             </li>
             <li class="">
+              <a class="dropdown-item" href="/tutorials/sensing-the-mind/">
+                Sensing the Mind
+              </a>
+            </li>
+            <li class="">
               <a
                 class="dropdown-item"
                 href="/tutorials/the-practice-of-using-language-models/"
