Updated footer with schedule download

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -67,11 +67,18 @@
         <div
           class="d-flex flex-column gap-2 justify-content-start align-content-start"
         >
-          <a href="/cfp" class="btn btn-primary text-decoration-none"
-            >Call for Papers and Proposals</a
-          >
           <a href="/registration" class="btn btn-success text-decoration-none"
             >Register for SWC 2025</a
+          >
+          <a
+            href="/assets/files/IEEE-SWC-2025-Program.pdf"
+            class="btn btn-primary"
+            download
+          >
+            <i class="bi bi-download"></i> Download Program Schedule (PDF)
+          </a>
+          <a href="/cfp" class="btn btn-primary text-decoration-none"
+            >Call for Papers and Proposals</a
           >
         </div>
       </div>
