--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -137,7 +137,7 @@
             </li>
             <li class="">
               <a class="dropdown-item" href="/forums/women-in-the-smart-world/">
-                WSW 2025</a
+                Women in the Smart World 2025</a
               >
             </li>
             <li class="border-top mt-2 pt-2">
